cleaning up, and bugs fixed